@@ -1,5 +1,5 @@
 PREFIX=$(HOME)/usr
 PROJNAME=dzco
-VERSION=1.4.10
+VERSION=1.4.11
 
-DEPENDENCY="zeda=1.6.36;zm=1.5.1"
+DEPENDENCY="zeda=1.6.45;zm=1.6.3"
