@@ -6,4 +6,3 @@ OBJ=dz_tf.o dz_tf_fr.o\
 	dz_sys_filt_maf.o dz_sys_filt_bw.o\
 	dz_sys_fg.o\
 	dz_ident_lag.o
-DLIB=libdzco.so
